# TextImageGen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  USAGE.txt  build.sh  build_cairo.sh  build_static.sh  lyrics.txt  package_release.sh  single_line.txt  test.sh  text2png.cpp  txt2png.cpp
